--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@stripe/stripe-js": "^5.4.0",
     "framer-motion": "^11.0.8",
     "i18next": "^24.1.0",
     "lucide-react": "^0.344.0",
