Update Netlify configuration for blog redirection, remove deprecated blog images and components, and adjust sitemap generation for new domain. Refactor App and Navbar components to include blog link and implement BlogRedirect component.

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,14 @@
     command="vite build"
     publish="/dist"
     base="/"
+
+# Redireciona /blog para o subdomínio
+[[redirects]]
+    from = "/blog"
+    to = "https://blog.huntermussel.com"
+    status = 301
+
+# Catch-all para SPA
 [[redirects]]
     from = "/*"
     to = "index.html"
